Added JVM options for all executions of gradle builds inside the tests